adapted DTOs on backend and frontend